Bug fix: banner no longer wraps over app menu buttons. Also, simplified based on our composition based direction.

--- a/src/firefly/js/ui/Banner.css
+++ b/src/firefly/js/ui/Banner.css
@@ -1,5 +1,8 @@
 .banner__Title {
-    float: left;
+    /*float: left;*/
+    position : absolute;
+    left : 0;
+    top : 0;
     letter-spacing: 1px;
     margin-left: 10px;
     color: white;
